--- a/hiera/data/env/staging.yaml
+++ b/hiera/data/env/staging.yaml
@@ -1,9 +1,9 @@
 rjil::jiocloud::consul::service::interval: "10s"
 
-public_address: "%{ipaddress_10_140_214_0_23}"
-public_interface: "%{interface_10_140_214_0_23}"
-private_address: "%{ipaddress_10_140_214_0_23}"
-private_interface: "%{interface_10_140_214_0_23}"
+public_address: "%{ipaddress}"
+public_interface: "%{interface_staging}"
+private_address: "%{ipaddress}"
+private_interface: "%{interface_staging}"
 
 keystone_public_address: "iam.ind-west-1.staging.deprecated.jiocloudservices.com"
 keystone_private_address: "iam.ind-west-1.staging.deprecated.jiocloudservices.com"
