--- a/hiera/data/env/staging.yaml
+++ b/hiera/data/env/staging.yaml
@@ -5,8 +5,8 @@ public_interface: "%{interface_10_140_214_0_23}"
 private_address: "%{ipaddress_10_140_214_0_23}"
 private_interface: "%{interface_10_140_214_0_23}"
 
-keystone_public_address: "iam.ind-west-1.staging.jiocloudservices.com"
-keystone_private_address: "iam.ind-west-1.staging.jiocloudservices.com"
+keystone_public_address: "iam.ind-west-1.staging.deprecated.jiocloudservices.com"
+keystone_private_address: "iam.ind-west-1.staging.deprecated.jiocloudservices.com"
 radosgw_public_address: "dss-dev-test.jiocloud.com"
 radosgw_internal_address: "dss-dev-test.jiocloud.com"
 
